libsql-server/src/schema/snapshots/libsql_server__schema__migration__test__already_performed_task_is_not_reexecuted.snap
---
source: libsql-server/src/schema/migration.rs
expression: schema
---
[
    Ok(
        "{Ok(\"type\"): (Text, \"table\"), Ok(\"name\"): (Text, \"__libsql_migration_tasks\"), Ok(\"tbl_name\"): (Text, \"__libsql_migration_tasks\"), Ok(\"rootpage\"): (Integer, 2), Ok(\"sql\"): (Text, \"CREATE TABLE __libsql_migration_tasks (\\n                job_id INTEGER PRIMARY KEY,\\n                status INTEGER,\\n                migration TEXT NOT NULL,\\n                error TEXT,\\n                finished BOOLEAN GENERATED ALWAYS AS (status = 4 OR status = 5)\\n\\n            )\")}",
    ),
]
